crates/jarl/tests/integration/snapshots/integration__statistics__hint_stats_arg_with_envvar.snap
---
source: crates/jarl/tests/integration/statistics.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--output-format\").arg(\"concise\").env(\"JARL_N_VIOLATIONS_HINT_STAT\",\n\"25\").run().normalize_os_executable_name()"
---

success: false
exit_code: 1
----- stdout -----
test.R [2:2] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [3:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [4:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [5:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [6:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [7:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [8:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [9:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [10:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [11:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [12:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [13:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [14:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [15:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [16:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [17:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
test.R [18:1] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.

Found 17 errors.
17 fixable with the `--fix` option.

----- stderr -----

----- args -----
check . --output-format concise
