crates/jarl/tests/integration/snapshots/integration__statistics__stats.snap
---
source: crates/jarl/tests/integration/statistics.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--statistics\").run().normalize_os_executable_name()"
---

success: false
exit_code: 1
----- stdout -----
   12 [*] any_is_na
    1 [ ] implicit_assignment

Rules with `[*]` have an automatic fix.

----- stderr -----

----- args -----
check . --statistics
