crates/jarl/tests/integration/snapshots/integration__statistics__stats_no_violation.snap
---
source: crates/jarl/tests/integration/statistics.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--statistics\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --statistics
